🚀 3단계 - 예약 대기 기능 (#34)
* refactor: 정적 팩토리 메소드 패턴 적용

* feat:예약 대기 기능 스크립트 추가

* docs: 예약 대기 등록 api 명세 추가

* feat: 예약 대기 객체 Waiting 생성

* feat: 예약 대기 등록 api 구현
- POST /reservations/waiting

* refactor: 예약 조회 시, 예약 대기에 대한 내용을 반영할 수 있도록 수정
- Reservation의 상태에 따른 응답객체 생성 분기 처리

* refactor: 예약 가능 시간 조회 api (GET /times/available) 수정
- response 객체에 예약 여부를 알 수 있는alreadyBooked 추가
- alreadyBooked 인자 값을 받는 메소드 생성

* fix: 예약 대기 등록 스크립트 수정

* feat: 잘못된 예약 요청에 대한 Exception 처리
- IllegalReservationException

* refactor: 인수테스트 시나리오 생성을 위한 given 메소드 step 클래스에 정의

* test: 예약 대기 등록 테스트 메소드 구현

* feat: 예약 대기 시 중복 예약 불가 로직 추가

* refactor: 중복 코드 제거

* refactor: Waiting을 Entity화 하지 않고 Reservation과 rank를 갖는 객체로 변경
- 나의 예약 조회 시 내 예약보다 먼저 등록한 예약의 count로 rank 대체

* refactor: alreadyBooked 인자를 갖는 response 객체 생성
- GET /times 의 응답값과 GET /times/available 응답값이 달라 따로 생성

* feat:  예약 대기 삭제 api 스크립트 적용

* feat: ReservationService 단위 테스트 생성
- Reservation 객체를 id 값으로만 비교하도록 수정

* refactor: cookie 값 삭제하는 메소드 CookieUtils에 정의

* refactor: 로그인에 필요한 쿠키 이름 token을 상수값으로 정의

* refactor: 코드 포매팅 및 불필요한 코드 수정

* refactor: 불필요한 Member 변수 삭제 및 역할에 맞는 메소드로 재정의

* refactor: 구체화된 Exception으로 대체
- ReservationNotExistsException

* refactor: Login token에 대한 Util 클래스 생성 및 테스트 메소드 적용

* test: mock 객체 호출 횟수에 대한 verify 구문 추가

* refactor: @Transactional 적용

* refactor: 메소드 명 변경

* refactor: 랭킹 조회 로직 수정
- Member에 대한 Reservation List 조회 후 각 Reservation에 대한 랭킹만 따로 조회
- ReservationRepository의 WaitingReservation 객체에 대한 책임을 줄이기 위해