@@ -2,11 +2,13 @@ package roomescape.reservation.service;
 
 import java.time.LocalDateTime;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import roomescape.error.exception.*;
 import roomescape.member.Member;
 import roomescape.member.repository.MemberRepository;
 import roomescape.reservation.Reservation;
 import roomescape.reservation.ReservationStatus;
+import roomescape.reservation.WaitingReservation;
 import roomescape.reservation.dto.MyReservationResponse;
 import roomescape.reservation.dto.ReservationRequest;
 import roomescape.reservation.dto.ReservationResponse;
@@ -17,9 +19,9 @@ import roomescape.theme.Theme;
 import roomescape.theme.repository.ThemeRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@Transactional(readOnly = true)
 public class ReservationService {
 
     private final ReservationRepository reservationRepository;
@@ -38,11 +40,45 @@ public class ReservationService {
 
     public List<ReservationResponse> findReservations() {
         return reservationRepository.findAll().stream()
-            .map(ReservationResponse::new)
-            .collect(Collectors.toList());
+            .map(ReservationResponse::of)
+            .toList();
     }
 
+    @Transactional
     public ReservationResponse saveReservation(Long memberId, ReservationRequest request) {
+        Reservation reservation = createReservation(memberId, request,
+            ReservationStatus.RESERVATION);
+
+        if (!reservationRepository.findByDateAndReservationTimeAndTheme(reservation.getDate(),
+            reservation.getReservationTime(), reservation.getTheme()).isEmpty()) {
+            throw new ReservationAlreadyExistsException();
+        }
+
+        return ReservationResponse.of(reservationRepository.save(reservation));
+    }
+
+    @Transactional
+    public ReservationResponse saveWaitingReservation(Long memberId, ReservationRequest request) {
+        Reservation reservation = createReservation(memberId, request, ReservationStatus.WAITING);
+
+        List<Reservation> reservations = reservationRepository.findByDateAndReservationTimeAndTheme(
+            reservation.getDate(), reservation.getReservationTime(), reservation.getTheme());
+
+        if (reservations.isEmpty()) {
+            throw new ReservationNotExistsException();
+        }
+
+        if (reservations.stream().anyMatch(x -> x.hasSameMember(reservation.getMember()))) {
+            throw new ReservationAlreadyExistsException();
+        }
+
+        reservationRepository.save(reservation);
+
+        return ReservationResponse.of(reservation);
+    }
+
+    private Reservation createReservation(Long memberId, ReservationRequest request,
+        ReservationStatus status) {
         Member member = memberRepository.findById(memberId)
             .orElseThrow(MemberNotExistsException::new);
         ReservationTime reservationTime = reservationTimeRepository.findById(request.getTimeId())
@@ -51,20 +87,17 @@ public class ReservationService {
             .orElseThrow(ThemeNotExistsException::new);
 
         Reservation reservation = new Reservation(member, request.getDate(), reservationTime, theme,
-                ReservationStatus.RESERVATION);
+            status);
 
         if (reservation.isBeforeThan(LocalDateTime.now())) {
             throw new PastDateTimeException();
         }
 
-        if (reservationRepository.findByDateAndReservationTimeAndTheme(reservation.getDate(),
-            reservationTime, theme).isPresent()) {
-            throw new ReservationTimeAlreadyExistsException();
-        }
-
-        return new ReservationResponse(reservationRepository.save(reservation));
+        return reservation;
     }
 
+
+    @Transactional
     public void deleteReservation(long id) {
         reservationRepository.deleteById(id);
     }
@@ -74,7 +107,9 @@ public class ReservationService {
             .orElseThrow(MemberNotExistsException::new);
 
         return reservationRepository.findByMember(member).stream()
-            .map(MyReservationResponse::new)
-            .collect(Collectors.toList());
+            .map(r -> new WaitingReservation(r, reservationRepository.findRankByMember(
+                r.getId(), r.getDate(), r.getReservationTime(), r.getTheme())))
+            .map(MyReservationResponse::from)
+            .toList();
     }
 }
