@@ -2,14 +2,15 @@ package roomescape.reservationtime.service;
 
 import java.time.LocalDate;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import roomescape.error.exception.ReservationTimeNotExistsException;
 import roomescape.error.exception.ReservationTimeReferenceException;
 import roomescape.error.exception.ThemeNotExistsException;
 import roomescape.reservation.repository.ReservationRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import roomescape.reservationtime.ReservationTime;
+import roomescape.reservationtime.dto.AvailableTimeResponse;
 import roomescape.reservationtime.dto.ReservationTimeRequest;
 import roomescape.reservationtime.dto.ReservationTimeResponse;
 import roomescape.reservationtime.repository.ReservationTimeRepository;
@@ -17,6 +18,7 @@ import roomescape.theme.Theme;
 import roomescape.theme.repository.ThemeRepository;
 
 @Service
+@Transactional(readOnly = true)
 public class ReservationTimeService {
 
     private final ReservationTimeRepository reservationTimeRepository;
@@ -31,17 +33,19 @@ public class ReservationTimeService {
         this.themeRepository = themeRepository;
     }
 
+    @Transactional
     public ReservationTimeResponse saveReservationTime(ReservationTimeRequest request) {
         ReservationTime reservationTime = new ReservationTime(request.getStartAt());
-        return new ReservationTimeResponse(reservationTimeRepository.save(reservationTime));
+        return ReservationTimeResponse.of(reservationTimeRepository.save(reservationTime));
     }
 
     public List<ReservationTimeResponse> findReservationTimes() {
         return reservationTimeRepository.findAll().stream()
-            .map(ReservationTimeResponse::new)
-            .collect(Collectors.toList());
+            .map(ReservationTimeResponse::of)
+            .toList();
     }
 
+    @Transactional
     public void deleteReservationTime(Long id) {
         ReservationTime reservationTime = reservationTimeRepository.findById(id)
             .orElseThrow(ReservationTimeNotExistsException::new);
@@ -53,21 +57,16 @@ public class ReservationTimeService {
         reservationTimeRepository.deleteById(id);
     }
 
-    public List<ReservationTimeResponse> findAvailableReservationTimes(String date, Long themeId) {
+    public List<AvailableTimeResponse> findAvailableReservationTimes(String date, Long themeId) {
         Theme theme = themeRepository.findById(themeId)
             .orElseThrow(ThemeNotExistsException::new);
         List<Long> ids = reservationRepository.findByDateAndTheme(LocalDate.parse(date), theme)
             .stream().map(reservation -> reservation.getReservationTime().getId())
             .toList();
 
-        if(ids.isEmpty()) {
-            return reservationTimeRepository.findAll().stream()
-                .map(ReservationTimeResponse::new)
-                .collect(Collectors.toList());
-        }
-
-        return reservationTimeRepository.findByIdNotIn(ids).stream()
-            .map(ReservationTimeResponse::new)
-            .collect(Collectors.toList());
+        return reservationTimeRepository.findAll().stream()
+            .map(reservationTime ->
+                AvailableTimeResponse.from(reservationTime, ids.contains(reservationTime.getId())))
+            .toList();
     }
 }
