@@ -1,18 +1,19 @@
 package roomescape.theme.service;
 
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import roomescape.error.exception.ThemeNotExistsException;
 import roomescape.error.exception.ThemeReferenceException;
 import roomescape.reservation.repository.ReservationRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import roomescape.theme.Theme;
 import roomescape.theme.dto.ThemeRequest;
 import roomescape.theme.dto.ThemeResponse;
 import roomescape.theme.repository.ThemeRepository;
 
 @Service
+@Transactional(readOnly = true)
 public class ThemeService {
 
     private final ThemeRepository themeRepository;
@@ -27,10 +28,11 @@ public class ThemeService {
     public List<ThemeResponse> findThemes() {
         return themeRepository.findAll().stream()
             .map(ThemeResponse::new)
-            .collect(Collectors.toList());
+            .toList();
     }
 
-    public Theme saveThemes(ThemeRequest request) {
+    @Transactional
+    public Theme saveTheme(ThemeRequest request) {
         return themeRepository.save(
             new Theme(request.getName(), request.getDescription(), request.getThumbnail()));
     }
@@ -40,6 +42,7 @@ public class ThemeService {
         return new ThemeResponse(theme);
     }
 
+    @Transactional
     public void deleteTheme(long id) {
         Theme theme = themeRepository.findById(id).orElseThrow(ThemeNotExistsException::new);
 
